--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "koishi-plugin-free-moda",
-  "description": "使用 ModelScope 免费 API 进行图片生成和编辑，支持 API Key 轮询、AI 生成提示词、自动识别分辨率",
-  "version": "1.0.2",
+  "description": "使用 ModelScope 免费 API 进行图片生成和编辑，支持模型单独注册成指令、 API Key 轮询、AI 生成提示词、自动识别分辨率、查询记录、收藏图片seed快速重绘、所有输出可自定义字段",
+  "version": "1.2.2",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
     "dist"
   ],
-  "license": "MIT",
+  "license": "MIT",                        
+  "homepage": "https://github.com/ziyi233/free-moda",        
+  "repository": {                           
+    "type": "git",
+    "url": "git+https://github.com/ziyi233/free-moda.git"
+  },
   "author": "ziyi233",
   "keywords": [
     "chatbot",
