--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-free-moda",
   "description": "使用 ModelScope 免费 API 进行图片生成和编辑，支持模型单独注册成指令、 API Key 轮询、AI 生成提示词、自动识别分辨率、查询记录、收藏图片seed快速重绘、所有输出可自定义字段",
-  "version": "1.3.2",
+  "version": "1.8.0-alpha.10",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -26,18 +26,22 @@
   ],
   "peerDependencies": {
     "koishi": "^4.15.6",
-    "koishi-plugin-chatluna": "^1.0.0-beta.119"
+    "koishi-plugin-chatluna": "^1.3.0-alpha.46"
   },
   "peerDependenciesMeta": {
     "koishi-plugin-chatluna": {
       "optional": true
     }
   },
-  "devDependencies": {
-    "koishi-plugin-chatluna": "^1.0.0-beta.119"
-  },
   "dependencies": {
-    "@langchain/core": "^0.3.2"
+    "@langchain/core": "0.3.62",
+    "zod": "3.25.76"
+  },
+  "resolutions": {
+    "@langchain/core": "0.3.62"
+  },
+  "overrides": {
+    "@langchain/core": "0.3.62"
   },
   "koishi": {
     "service": {
