--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
+# 编译输出
 lib
 dist
-external
+*.tsbuildinfo
 
+# 依赖
 node_modules
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-tsconfig.tsbuildinfo
 
+# 日志
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# 编辑器
 .eslintcache
 .DS_Store
 .idea
@@ -16,3 +21,6 @@ tsconfig.tsbuildinfo
 *.ntvs*
 *.njsproj
 *.sln
+
+# AI 生成的文档（可选，根据需要保留或删除）
+# SUMMARY.md
